--- a/offcn/config-repo/UserProvdier01-pro.yml
+++ b/offcn/config-repo/UserProvdier01-pro.yml
@@ -1,5 +1,7 @@
 server:
   port: 8003
+#配置显示给消费者的服务器端标识信息
+ProviderVersion: UserProvider001:7.7.7V  
 spring:
   datasource:
     url: jdbc:mysql://localhost:3308/springboot-001?serverTimezone=GMT%2B8
